# DNA-Analyzer

./: Context.md  README.md  requirements.txt
backend/: pytest.ini  run_tests.py
backend/config/: middleware.py  settings.py  urls.py
backend/search_api/: admin.py  grpc_client.py  models.py  serializers.py  services.py  urls.py  views.py
backend/search_api/grpc_stubs/: __init__.py  dna_search_pb2.py  dna_search_pb2_grpc.py
backend/search_api/tests/: __init__.py  test_grpc_client.py  test_integration.py  test_models.py  test_services.py
backend/sequences_api/: admin.py  apps.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/sequences_api/tests/: __init__.py  test_integration.py  test_models.py  test_serializers.py  test_validators.py
backend/tests/: __init__.py  locustfile.py  test_acceptance.py  test_functional_api.py  test_performance.py  test_security.py  test_system_e2e.py
frontend/: index.html  script.js  style.css
frontend/static/: script.js  style.css
frontend/templates/: index.html
microservices/dna_search/: CMakeLists.txt  Dockerfile  README.md
microservices/dna_search/include/: server.h
microservices/dna_search/include/algorithms/: kmp.h
microservices/dna_search/proto/: dna_search.proto
microservices/dna_search/src/: main.cpp  server.cpp
microservices/dna_search/src/algorithms/: kmp.cpp
microservices/dna_search/tests/: CMakeLists.txt  README.md  test_kmp.cpp
